<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/category_general"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="service_enabled"
            android:title="Enable Focus"
            android:summary="Turn on the protection service"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="focus_mode"
            android:title="@string/setting_focus_mode"
            android:summary="@string/setting_focus_mode_desc"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_apps"
        app:iconSpaceReserved="false">

        <!-- Remove individual app switches -->
        <!-- 
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="app_instagram"
            android:title="@string/setting_app_instagram"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="app_youtube"
            android:title="@string/setting_app_youtube"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="app_snapchat"
            android:title="@string/setting_app_snapchat"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="app_tiktok"
            android:title="@string/setting_app_tiktok"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="app_facebook"
            android:title="@string/setting_app_facebook"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="app_twitter"
            android:title="@string/setting_app_twitter"
            app:iconSpaceReserved="false" />
        -->
        
        <!-- Add Preference for managing blocked apps -->
        <Preference
            android:key="blocked_apps"
            android:title="@string/setting_blocked_apps"
            android:summary="@string/setting_blocked_apps_desc"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_content"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="content_reels"
            android:title="@string/setting_content_reels"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="content_shorts"
            android:title="@string/setting_content_shorts"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="content_explore"
            android:title="@string/setting_content_explore"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:key="block_adult_content"
            android:title="@string/setting_block_adult_content"
            android:summary="@string/setting_block_adult_content_desc"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>
